# cookiecutter-uvpackage

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  cookiecutter.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: test-template.yml  update-precommit.yml
docs/: conf.py  prompts.rst
hooks/: post_gen_project.py
tests/: test_template_generation.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  LICENSE  Makefile  README.md  README.rst  pyproject.toml  ty.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  run-tests.yml  update-precommit.yml  update_data
{{cookiecutter.project_slug}}/data/: .gitkeep
{{cookiecutter.project_slug}}/notebooks/: main.ipynb
{{cookiecutter.project_slug}}/scripts/: hello_world.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: altairconfig.py  logger.py
{{cookiecutter.project_slug}}/tests/: test_true.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: GettingStarted.ipynb  __init__.py  main.ipynb
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: logger.py
