[project]
name = "uv-cookiecutter-template"
version = "0.1.0"
description = ""
authors = [
    { name = "Thomas Camminady", email = "thomas@camminady.dev" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "cookiecutter",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
